# elle-elle-aime

./: .gitattributes  .gitmodules  .pre-commit-config.yaml  README.md  clean_update_cache.sh  export_results.py  generate_patches.py  pyproject.toml  samples_runbugrun_instruct_.jsonl  samples_runbugrun_instruct_python_.jsonl  setup.sh
.github/workflows/: tests.yml
elleelleaime/core/benchmarks/runbugrun/: output_matcher.py  runbugrun.py  runbugrunbug.py
elleelleaime/core/utils/python/: python.py
elleelleaime/evaluate/strategies/anthropic/: anthropic.py
elleelleaime/evaluate/strategies/mistral/: mistral.py
elleelleaime/evaluate/strategies/openrouter/: openrouter.py
elleelleaime/evaluate/strategies/text/: instruct.py
elleelleaime/export/cost/strategies/: google.py  openai.py  openrouter.py
elleelleaime/export/token/: token_calculator.py
elleelleaime/export/token/strategies/: anthropic.py  cost_strategy.py  google.py  mistral.py  openai.py  openrouter.py
elleelleaime/generate/strategies/: registry.py
elleelleaime/generate/strategies/models/huggingface/deepseek/: deepseek_fim.py
elleelleaime/generate/strategies/models/openai/: openai.py
elleelleaime/generate/strategies/models/openrouter/: openrouter.py
elleelleaime/sample/strategies/: infilling.py
tests/core/benchmarks/runbugrun/: test_runbugrun.py
tests/export/token/: test_token_calculator.py
